[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anee"
version = "0.3"
description = "Adaptive Neural Execution Engine – Dynamic sparse inference for pre-trained Transformers."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Ahmed Bin Khalid", email = "ahmed.khalid2108@gmail.com" },
]

dependencies = [
  "torch",
  "transformers",
  "numpy",
  "matplotlib"
]

[project.urls]
Homepage = "https://github.com/abkmystery/ANEE"
Source = "https://github.com/abkmystery/ANEE"
